SDK-1181 create profiles and use them in scenarios, separate scenarios into classes